# phz

./: .gitignore  docker-compose.prod.yml
data/: BI-WORKSPACE-REQUIREMENTS.md  PHZ-GRID-STATUS-REPORT.md  PHZ-GRID-TEST-REPORT.md  TESTING.md  design-research-findings.md
data-service/: .dockerignore  Cargo.toml  Dockerfile
data-service/src/: config.rs  error.rs  main.rs
data-service/src/arrow_conv/: mod.rs
data-service/src/db/: mod.rs  pool.rs  query.rs
data-service/src/routes/: data.rs  health.rs  mod.rs  schema.rs
phz-grid/: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  project.config.yaml  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
phz-grid/.changeset/: config.json
phz-grid/chronicles/: PROJECT-CHRONICLE-Latest.html  PROJECT-CHRONICLE-phz-grid-BI-Implementation-Guide-2026-03-07.html  PROJECT-CHRONICLE-phz-grid-Release-2026-03-05-v2.html  PROJECT-CHRONICLE-phz-grid-Release-2026-03-05.html  PROJECT-CHRONICLE-phz-grid-Release-2026-03-07-v3.md
phz-grid/docs/: ACCESSIBILITY.md  EVENT-CATALOG.md  INTEGRATION-GUIDE.md  PATCH-BOOK.md  PHZ-GRID-AI-REFERENCE.md  REVIEW-FIXES-TRACKER.md
phz-grid/e2e/: accessibility.spec.ts  grid-rendering.spec.ts  index.html  keyboard-navigation.spec.ts  package.json  setup.ts  vite.config.ts
phz-grid/examples/: README.md  filtered-dashboard.html  (+2 more)
report_app/: Dockerfile  docker-compose.yml  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
(+214 files in other folders)
